project name change

--- a/🚀 静态网站部署记录.md
+++ b/🚀 静态网站部署记录.md
@@ -105,7 +105,7 @@
      
        ```bash
        ➜  nginx tail /var/log/nginx/error.log
-       2024/01/14 01:37:16 [crit] 38147#38147: *8 stat() "/root/Desktop/sylas-h5/" failed (13: Permission denied), client: 123.120.53.112, server: www.rux.ink, request: "GET / HTTP/1.1", host: "www.rux.ink"
+       2024/01/14 01:37:16 [crit] 38147#38147: *8 stat() "/root/Desktop/zilean/" failed (13: Permission denied), client: 123.120.53.112, server: www.rux.ink, request: "GET / HTTP/1.1", host: "www.rux.ink"
        ```
        
      - 有可能是因为权限不足导致的启动失败，修改 `nginx.conf user` 为 `root` 重新启动 `nginx`
@@ -197,7 +197,7 @@
    示例：
 
    ```bash
-   scp /Desktop/sylas-h5/dist root@192.168.1.100:/root/Desktop/sylas-h5
+   scp /Desktop/zilean/dist root@192.168.1.100:/root/Desktop/zilean
    ```
 
 2. 输入用户密码（或如果配置了 SSH 公钥，可能需要输入 SSH 密钥密码）。
@@ -220,7 +220,7 @@
    示例：
 
    ```bash
-   rsync -avz -e "ssh" /Desktop/sylas-h5/dist root@192.168.1.100:/root/Desktop/sylas-h5
+   rsync -avz -e "ssh" /Desktop/zilean/dist root@192.168.1.100:/root/Desktop/zilean
    ```
 
 2. 输入用户密码（或如果配置了 SSH 公钥，可能需要输入 SSH 密钥密码）。
@@ -292,7 +292,7 @@ jobs:
           # 源目录，相对于 $GITHUB_WORKSPACE 根目录，例如：dist/
           SOURCE: ./dist/*
           # 目标目录
-          TARGET: /root/Desktop/sylas-h5
+          TARGET: /root/Desktop/zilean
           # 传递给 rsync 的参数
           ARGS: -rlgoDzvc -i
           # 用逗号分隔的排除路径，例如：/node_modules/
@@ -300,8 +300,8 @@ jobs:
           # 在 rsync 之前在主机上运行的脚本
           SCRIPT_BEFORE: |
             # 检查 TARGET 目标路径是否存在，不存在则创建
-            if [ ! -d "/root/Desktop/sylas-h5" ]; then
-              mkdir -p "/root/Desktop/sylas-h5"
+            if [ ! -d "/root/Desktop/zilean" ]; then
+              mkdir -p "/root/Desktop/zilean"
             fi
           # 在 rsync 之后在主机上运行的脚本
           SCRIPT_AFTER: |
